--- a/src/components/Chatbot.module.css
+++ b/src/components/Chatbot.module.css
@@ -1,16 +1,29 @@
-/* Chatbot.module.css */
-.fullPageChatbot {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
-  }
-  
-  .fullPageChatbot iframe {
-    border: none;
-    width: 100%;
-    height: 98%;
-  }
-  
+.wrapper {
+  display: grid;
+  grid-template-columns: auto 100px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: #323236;
+}
+
+.text {
+  border: none;
+  outline: none;
+  background: none;
+  padding: 20px;
+  color: white;
+  font-size: 16px;
+}
+
+.btn {
+  border: none;
+  border-radius: 0 10px 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: rgb(218, 255, 170);
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: rgb(200, 253, 130);
+}
