--- a/src/components/Chatbot.module.css
+++ b/src/components/Chatbot.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: auto 100px;
   height: 60px;
   border-radius: 10px;
-  background-color: #323236;
+  background-color: white;
 }
 
 .text {
@@ -11,7 +11,7 @@
   outline: none;
   background: none;
   padding: 20px;
-  color: white;
+  color: black;
   font-size: 16px;
 }
 
