--- a/src/components/ServicePage.css
+++ b/src/components/ServicePage.css
@@ -4,3 +4,10 @@
   align-items: center;
   height: 100px;
 }
+
+.welcome{
+  display: flex;
+  justify-content: left;
+  align-items: flex-start;
+  
+}
